--- a/pathing.ipynb
+++ b/pathing.ipynb
@@ -25,6 +25,7 @@
     "# index_key = lambda t, m: (t[0]+m+1 + (t[1]+m+1)*2*m)\n",
     "\n",
     "class PriorityQueue:\n",
+    "    \"\"\"This provides the heap to store the keys for hexes to check\"\"\"\n",
     "    def __init__(self):\n",
     "        self.elements = []\n",
     "    \n",
@@ -39,6 +40,7 @@
     "\n",
     "\n",
     "class path_finder:\n",
+    "    \"\"\"This creates a grid of hexagons and runs the search upon them.\"\"\"\n",
     "    def __init__(self, grid_rings):\n",
     "        self.hex_meters = 800.0\n",
     "        self.grid_rings = grid_rings\n",
